--- a/package.json
+++ b/package.json
@@ -27,11 +27,19 @@
   "homepage": "https://github.com/vasanthk/react-es6-webpack-boilerplate",
   "dependencies": {
     "babel-runtime": "^6.20.0",
+    "history": "^4.7.2",
+    "node-uuid": "^1.4.8",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-fetch": "0.0.9",
     "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
-    "styled-components": "^2.1.2"
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
+    "styled-components": "^2.1.2",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
